fix(Styles): :bug: dark mode in news fixed

--- a/client/src/styles/components/news/_news.scss
+++ b/client/src/styles/components/news/_news.scss
@@ -22,6 +22,11 @@
     margin-top: 10px;
     box-shadow: 1px 1px 1px 1px rgba(161, 159, 159, 0.3);
     margin-bottom: 10px;
+    body.dark & {
+      background-color: $standard-container-black;
+      align-items: center;
+    }
+
     @media (max-width: 710px) {
       flex-wrap: wrap;
       background-color: white;
@@ -313,4 +318,10 @@
     color: $standard-color-blue-green;
     border: 1px solid $standard-color-blue;
   }
+}
+
+
+.news_container_loader {
+  width: 20px;
+  height: 20px;
 }
